--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prettier-plugin-moka-sort",
   "version": "0.0.1",
   "description": "prettier plugin for moka sort",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "repository": {
     "url": "https://github.com/ZhuangDengDeng/prettier-plugin-moka-sort",
     "type": "git"
