--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "prettier-plugin-moka-sort",
+  "name": "prettier-plugin-moka-format",
   "version": "0.1.0",
-  "description": "prettier plugin for moka sort",
+  "description": "prettier plugin for moka format",
   "main": "lib/src/index.js",
   "repository": {
     "url": "https://github.com/ZhuangDengDeng/prettier-plugin-moka-sort",
