--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,11 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "plugins": ["./lib/src/index.js"],
+  "configuredRules": ["importSort"],
+  "parserPlugins": ["decorators-legacy","jsx","typescript"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importAliasRegExpList": ["^@/","^(@common)"]
 }
