--- a/.prettierrc
+++ b/.prettierrc
@@ -9,11 +9,5 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "plugins": ["./lib/src/index.js"],
-  "configuredRules": ["importSort"],
-  "parserPlugins": ["decorators-legacy","jsx","typescript"],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true,
-  "importAliasRegExpList": ["^@/","^(@common)"]
+  "arrowParens": "always"
 }
