--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "example": "prettier --config ./examples/.prettierrc --plugin lib/src/index.js",
     "prepublishOnly": "npm run compile && npm run test",
     "postversion": "git push && git push --tags",
-    "format": "prettier --write \"src/**/*.ts\" ",
+    "format": "eslint \"src/**/*.ts\" --fix &&  prettier --write \"src/**/*.ts\" ",
     "version": "npm run format && git add -A src"
   },
   "keywords": [
@@ -39,6 +39,7 @@
     "@babel/parser": "7.14.6",
     "@babel/traverse": "7.13.0",
     "@babel/types": "7.13.0",
+    "eslint-config-prettier": "^8.3.0",
     "javascript-natural-sort": "^0.7.1",
     "lodash": "4.17.21",
     "postcss-sorting": "^7.0.1",
@@ -50,6 +51,9 @@
     "@types/lodash": "4.14.168",
     "@types/node": "14.14.34",
     "@types/prettier": "^2.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
     "jest": "26.6.3",
     "prettier": "2.3.1",
     "ts-jest": "26.5.3",
