--- a/package.json
+++ b/package.json
@@ -42,11 +42,15 @@
     "@babel/traverse": "7.13.0",
     "@babel/types": "7.13.0",
     "eslint-config-prettier": "^8.3.0",
+    "find-up": "^5.0.0",
     "javascript-natural-sort": "^0.7.1",
     "lodash": "4.17.21",
+    "micromatch": "^4.0.4",
     "postcss-sorting": "^7.0.1",
+    "slash": "^3.0.0",
     "standard-version": "^9.3.2",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
@@ -54,6 +58,7 @@
     "@types/chai": "4.2.15",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "14.14.34",
     "@types/prettier": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
